@@ -1,5 +1,9 @@
 2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>
 
+	* misc/pandora_file.cc: fixed unclosed directory with function closedir.
+
+2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* misc/pandora_file.cc, pandora_file.h: Added function to remove directories
 	recursively
 
